got an api key for a pretty mapset and set the basic variables so it looks nice

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
+    <!--<link rel="stylesheet" type="text/json" href="https://maps.geoapify.com/v1/styles/osm-carto/style.json?apiKey=35ea7f2848fe4e50979eb9488a243577">-->
     <!--importing leafletjs's javascript file-->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
@@ -18,6 +19,9 @@
     <h1>Boston's Combat Zone</h1>
     <p>Some text explaining how to use this.</p>
     <div id="map"></div>
+    <script src="boston_map.js"></script>
 </body>
+
+
 
 </html>
