--- a/index.html
+++ b/index.html
@@ -8,18 +8,111 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
-    <!--<link rel="stylesheet" type="text/json" href="https://maps.geoapify.com/v1/styles/osm-carto/style.json?apiKey=35ea7f2848fe4e50979eb9488a243577">-->
     <!--importing leafletjs's javascript file-->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
+
+        <!-- imports for juxtapose.js-->
+        <link rel="stylesheet" href="//cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
+        <script type="text/javascript" src="https://cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.js"></script>
 </head>
+
 
 <body>
     <h1>Boston's Combat Zone</h1>
     <p>Some text explaining how to use this.</p>
     <div id="map"></div>
+   <!-- <div id="juxtapose"></div>-->
     <script src="boston_map.js"></script>
+
+
+    <div id="juxtapose">
+        <div id="juxtapose-embed"></div>
+        <div id="controls">
+          <a href="" id="left-button">Left</a> |
+          <a href="" id="right-button">Right</a>
+        </div>
+      </div>
+  
+      <div>
+        <div id="juxtapose-hidden"></div>
+      </div>
+  
+      <script type="text/javascript">
+  
+          let origImages = [
+              {
+                  "src": "https://loremflickr.com/300/300",
+                  "credit": "LoremFlickr",
+                  "label": "Left kitten"
+              },
+              {
+                  "src": "https://loremflickr.com/300/300",
+                  "credit": "LoremFlickr",
+                  "label": "Right kitten"
+              }
+          ];
+  
+          let origOptions = {
+              "makeResponsive": true,
+              "showLabels": true,
+              "mode": "horizontal",
+              "showCredits": true,
+              "animate": true,
+              "startingPosition": "50"
+          };
+  
+          const juxtaposeSelector = "#juxtapose-embed";
+          const transientSelector = "#juxtapose-hidden";
+          var slider;
+  
+          function replaceImage(LeftRight) {
+              let leftImage = {
+                  label: "Left kitten",
+                  credit: "LoremFlickr",
+              };
+              let rightImage = {
+                  label: "Right kitten",
+                  credit: "LoremFlickr",
+              };
+              if (LeftRight === "Left") {
+                  leftImage.src = "https://loremflickr.com/300/300?ts=" + new Date().getTime();
+                  rightImage.src = slider.imgAfter.image.src;
+              } else if (LeftRight === "Right") {
+                  leftImage.src = slider.imgBefore.image.src;
+                  rightImage.src = "https://loremflickr.com/300/300?ts=" + new Date().getTime();
+              }
+              let images = [leftImage, rightImage];
+              let options = slider.options;
+              options.callback = function(obj) {
+                  var newNode = document.getElementById(obj.selector.substring(1));
+                  var oldNode = document.getElementById(juxtaposeSelector.substring(1));
+                  oldNode.replaceChild(newNode.children[0], oldNode.children[0]);
+                  newNode.removeChild(newNode.children[0]);
+              };
+              options.startingPosition = slider.sliderPosition;
+              slider = new juxtapose.JXSlider(transientSelector, images, options);
+          };
+  
+          function replaceLeft(e) {
+              e.preventDefault();
+              replaceImage("Left");
+          }
+  
+          function replaceRight(e) {
+              e.preventDefault();
+              replaceImage("Right");
+          }
+  
+          (function() {
+              slider = new juxtapose.JXSlider(
+                  juxtaposeSelector, origImages, origOptions);
+              document.getElementById("left-button").onclick = replaceLeft;
+              document.getElementById("right-button").onclick = replaceRight;
+          })();
+      </script>
+  
 </body>
 
 
