--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <link rel="stylesheet" href="//cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
     <script type="text/javascript" src="https://cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.js"></script>
 
+    <!-- imports for reading shapefiles-->
     <script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
+    <script src="https://github.com/calvinmetcalf/leaflet.shapefile"></script>
 
    
 </head>
