--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- imports for reading shapefiles-->
     <script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
-    <script src="https://github.com/calvinmetcalf/leaflet.shapefile"></script>
+    <script src="leaflet.shapefile.js"></script>
 
    
 </head>
